--- a/options.html
+++ b/options.html
@@ -8,6 +8,58 @@
     <link rel="stylesheet" href="/assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <script src="/assets/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 </head>
+<style>
+    @keyframes shine {
+    0% {
+        background-position: -100px;
+    }
+    100% {
+        background-position: 200px;
+    }
+}
+
+@keyframes jump {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-8px);
+    }
+}
+
+.new-list-item,
+.status-list-item {
+    padding: 2px 10px !important;
+    border-radius: 50px;
+    color: white;
+    animation: shine 2s linear infinite, jump 1.5s ease-in-out infinite;
+    background-size: 200% auto;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(
+        120deg,
+        rgba(255, 255, 255, 0.1) 0%,
+        rgba(255, 255, 255, 0.4) 50%,
+        rgba(255, 255, 255, 0.1) 100%
+    );
+}
+
+.new-list-item {
+    background-color: darkblue;
+}
+
+.status-list-item {
+    background-color: darkred;
+}
+
+    .new-list-item .textParagraph,
+    .status-list-item .textParagraph {
+        margin: 0;
+        font-size: 10px;
+        line-height: 2;
+        padding: 0;
+        font-weight: bold;
+    }
+</style>
 <body>
     <div class="card" style="margin: 20px auto; max-width: 1000px; min-width: 300px;">
         <div class="card-header">
@@ -33,18 +85,46 @@
         <div class="card-header">
             <h5>SidePanel Preview</h5>
         </div>
-        <div class="card-body" id="previewSheetData">
-            <div class="input-group mb-1">
+        <div class="card-body d-flex flex-column gap-2" id="previewSheetData">
+            <div class="input-group mb-1 position-relative">
+                <div class="position-absolute top-0" style="z-index: 1;right: 15px;">
+                    <div class="row gap-1">
+                        <div class="col-auto p-0 status-list-item">
+                            <p class="textParagraph">
+                                Top Errors
+                            </p>
+                        </div>
+                        <div class="col-auto p-0 new-list-item">
+                            <p class="textParagraph">
+                                New
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 <div class="input-group-text">
                     <input type="checkbox" class="form-check-input mt-0" id="idNumber1" name="category1" value="Placeholder1" aria-label="Checkbox if task already done."/>
                 </div>
                 <label for="idNumber1" class="form-control">Placeholder</label>
             </div>
-            <div class="input-group mb-1">
-                <div class="input-group-text">
-                    <input type="checkbox" class="form-check-input mt-0" id="idNumber2" name="category2" value="Placeholder2" aria-label="Checkbox if task already done."/>
+            <div class="input-group mb-1 position-relative">
+                <div class="position-absolute top-0" style="z-index: 1;right: 15px;">
+                    <div class="row gap-1">
+                        <div class="col-auto p-0 status-list-item">
+                            <p class="textParagraph">
+                                Top Errors
+                            </p>
+                        </div>
+                        <div class="col-auto p-0 new-list-item">
+                            <p class="textParagraph">
+                                New
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <label for="idNumber2" class="form-control">Placeholder</label>
+                <div class="input-group-text">
+                    <input type="checkbox" class="form-check-input mt-0" id="idNumber1" name="category1" value="Placeholder1" aria-label="Checkbox if task already done."/>
+                </div>
+                <label for="idNumber1" class="form-control">Placeholder</label>
             </div>
         </div>
     </div>
