--- a/sidepanel.html
+++ b/sidepanel.html
@@ -15,6 +15,15 @@
     img.refreshButton:hover {
         filter: brightness(0.8);
     }
+    div.loading {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(201, 201, 201, 0.8);
+    }
 </style>
 <body style="padding: 10px 5px;">
     <div class="mb-3 row g-1">
