--- a/options.html
+++ b/options.html
@@ -69,6 +69,8 @@
             <div class="mb-3">
                 <label for="apiKey" class="form-label">App Script Deployment ID:</label>
                 <input type="text" class="form-control" id="apiKey">
+                <div class="form-text"><strong>Enter the Apps Script Deployment ID to connect to your Google Sheet.</strong><br>
+Need help finding your Deployment ID? Click here for <a href="https://sites.google.com/view/checkitextension/home">Instructions for Perfect Checks.</a></div>
             </div>
             <div class="mb-3">
                 <button type="submit" class="btn btn-primary mb-3" id="saveButton">Save</button>
