--- a/sidepanel.html
+++ b/sidepanel.html
@@ -6,7 +6,7 @@
     <title>Checklist Sidepanel</title>
     <script src="/assets/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="/assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-    <script src="/assets/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
+    <script src="/assets/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <style>
     img.refreshButton {
@@ -24,6 +24,56 @@
         align-items: center;
         background-color: rgba(201, 201, 201, 0.8);
     }
+@keyframes shine {
+  0% {
+    background-position: -100px;
+  }
+  100% {
+    background-position: 200px;
+  }
+}
+
+@keyframes jump {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-8px);
+  }
+}
+
+.new-list-item,
+.status-list-item {
+    padding: 2px 10px !important;
+    border-radius: 50px;
+    color: white;
+    animation: shine 2s linear infinite, jump 1.5s ease-in-out infinite;
+    background-size: 200% auto;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(
+        120deg,
+        rgba(255, 255, 255, 0.1) 0%,
+        rgba(255, 255, 255, 0.4) 50%,
+        rgba(255, 255, 255, 0.1) 100%
+    );
+}
+
+.new-list-item {
+    background-color: darkblue;
+}
+
+.status-list-item {
+    background-color: darkred;
+}
+
+.new-list-item .textParagraph,
+.status-list-item .textParagraph {
+    margin: 0;
+    font-size: 10px;
+    line-height: 2;
+    padding: 0;
+    font-weight: bold;
+}
 </style>
 <body style="padding: 10px 5px;">
     <div class="mb-3 row g-1">
@@ -35,7 +85,8 @@
             <input type="text" class="form-control" id="searchList" placeholder="Search..." aria-label="Search List" aria-describedby="basic-addon1">
         </div>
     </div>
-    <div class="checklistInfo"></div>
+    <div class="checklistInfo d-flex flex-column gap-2">
+    </div>
 </body>
 <script src="sidepanel.js"></script>
 </html>
