--- a/options.html
+++ b/options.html
@@ -72,15 +72,15 @@
                 <div class="form-text"><strong>Enter the Apps Script Deployment ID to connect to your Google Sheet.</strong><br>
 Need help finding your Deployment ID? Click here for <a href="https://sites.google.com/view/checkitextension/home">Instructions for Perfect Checks.</a></div>
             </div>
-            <div class="mb-3">
-                <button type="submit" class="btn btn-primary mb-3" id="saveButton">Save</button>
-            </div>
-            <div class="mb-3">
+            <!-- <div class="mb-3"> -->
+                <button type="submit" class="btn btn-primary" id="saveButton">Save</button>
+            <!-- </div> -->
+            <!-- <div class="mb-3">
                 <label for="apiKey" class="form-label">Select Excel Sheet:</label>
                 <select name="selectTableSheet" class="form-select" id="selectTableSheet">
                     <option disabled hidden selected>--Select Excel Sheet Table--</option>
                 </select>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="card" style="margin: 20px auto; max-width: 1000px; min-width: 300px;">
