--- a/sidepanel.html
+++ b/sidepanel.html
@@ -93,7 +93,7 @@
             <input type="text" class="form-control" id="searchList" placeholder="Search..." aria-label="Search List" aria-describedby="basic-addon1">
         </div>
     </div>
-    <div class="checklistInfo d-flex flex-column gap-2"></div>
+    <div class="checklistInfo d-flex flex-column gap-2" style="margin-bottom: 4rem;"></div>
 </body>
 <script src="/assets/sortable.min.js"></script>
 <script src="sidepanel.js"></script>
