--- a/options.html
+++ b/options.html
@@ -59,6 +59,31 @@
         padding: 0;
         font-weight: bold;
     }
+    #exportChecklistButton {
+  opacity: 0;
+  transition: opacity 0.4s ease;
+  pointer-events: none;
+  z-index: 1000;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#hoverZone {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  z-index: 999;
+}
+
+#hoverZone:hover + #exportChecklistButton {
+  opacity: 1 !important;
+  pointer-events: auto !important;
+}
+
 </style>
 <body>
     <div class="card" style="margin: 20px auto; max-width: 1000px; min-width: 300px;">
@@ -71,6 +96,10 @@
                 <input type="text" class="form-control" id="apiKey">
                 <div class="form-text"><strong>Enter the Apps Script Deployment ID to connect to your Google Sheet.</strong><br>
 Need help finding your Deployment ID? Click here for <a href="https://sites.google.com/view/checkitextension/home">Instructions for Perfect Checks.</a></div>
+            </div>
+            <div class="mb-3">
+                <label for="user" class="form-label">Name:</label>
+                <input type="text" class="form-control" id="user">
             </div>
             <!-- <div class="mb-3"> -->
                 <button type="submit" class="btn btn-primary" id="saveButton">Save</button>
